gccida/g3/expand_end_case_type
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5736:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5737:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5740:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5741:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5757:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5758:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5764:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5766:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v47; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5773:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v54; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5774:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5776:4: error: expected ';' after expression
rtx v57; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5776:5: error: use of undeclared identifier 'v57'
rtx v57; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5777:4: error: expected ';' after expression
rtx v58; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5777:5: error: use of undeclared identifier 'v58'
rtx v58; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5783:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v64; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5784:4: error: expected ';' after expression
rtx v65; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5784:5: error: use of undeclared identifier 'v65'
rtx v65; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5790:4: error: expected ';' after expression
rtx v71; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/stmt.c:5790:5: error: use of undeclared identifier 'v71'
rtx v71; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_end_case_type/src/obj/stmt.o] Error 1
